--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Happy Birthday</title>
+    <script type="application/javascript" src="bday.js"></script>
+    <link rel="stylesheet" href="bday.css">
 </head>
 <body>
-
+<h1> Happy Birthday</h1>
+<button onclick="HappyBirthday()"> Press me for a surprise </button>
+<iframe src="https://www.youtube.com/watch?v=EjY4AirrdLw" id="birthdaySong" style="display:none"></iframe>
 </body>
 </html>
