--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="bday.css">
 </head>
 <body>
-<h1> Happy Birthday</h1>
+<h1> Happy Birthday, Petter!</h1>
 <button onclick="HappyBirthday()"> Press me for a surprise </button>
 <iframe src="https://www.youtube.com/watch?v=EjY4AirrdLw" id="birthdaySong" style="display:none"></iframe>
 </body>
