--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <h1> Happy Birthday, Petter!</h1>
-<button onclick="HappyBirthday()"> Press me for a surprise </button>
-<iframe src="https://www.youtube.com/watch?v=EjY4AirrdLw" id="birthdaySong" style="display:none"></iframe>
+<button onclick="HappyBirthday()" id="button"> Press me for a surprise </button>
+<iframe src="https://www.youtube.com/embed/EjY4AirrdLw?controls=1&autoplay=1&mute=1" frameborder="0"
+        allow="accelerometer;
+autoplay; clipboard-write; controls; encrypted-media; gyroscope; picture-in-picture" id="birthdaySong" allowfullscreen style="display:none"></iframe>
+
 </body>
 </html>
